--- a/components/Section-I/main.tex
+++ b/components/Section-I/main.tex
@@ -1,10 +1,10 @@
 
 \newpage
-
-\section*{\textbf{LỜI MỞ ĐẦU}}
+\phantomsection
 \addcontentsline{toc}{section}{LỜI MỞ ĐẦU}
+\section*{\textbf{LỜI MỞ ĐẦU}}
 Trong bối cảnh chuyển đổi số đang diễn ra mạnh mẽ trên toàn cầu, việc ứng dụng công nghệ vào đời sống hàng ngày đã trở thành xu thế tất yếu. Đặc biệt trong lĩnh vực tài chính, thanh toán không dùng tiền mặt đang dần thay thế các phương thức truyền thống nhờ sự tiện lợi, an toàn và tốc độ vượt trội. Tại môi trường giáo dục đại học, nhu cầu về một hệ thống thanh toán thông minh, tích hợp đa tiện ích cho sinh viên ngày càng trở nên cấp thiết.
 
-Nắm bắt được nhu cầu đó, đồ án này tập trung nghiên cứu và phát triển ``Nền tảng Ví điện tử Sinh viên'' - một giải pháp tài chính số toàn diện. Hệ thống không chỉ giúp sinh viên đơn giản hóa việc thanh toán các dịch vụ trong khuôn viên trường thông qua công nghệ NFC và Mobile App, mà còn cung cấp công cụ quản lý chi tiêu hiệu quả tích hợp trí tuệ nhân tạo.
+Nắm bắt được nhu cầu đó, đồ án này tập trung nghiên cứu và phát triển ``S-Wallet Ví Điện Tử Sinh Viên'' - một giải pháp tài chính số toàn diện. Hệ thống không chỉ giúp sinh viên đơn giản hóa việc thanh toán các dịch vụ trong khuôn viên trường thông qua công nghệ NFC và Mobile App, mà còn cung cấp công cụ quản lý chi tiêu hiệu quả tích hợp trí tuệ nhân tạo.
 
 Với sự kết hợp giữa ứng dụng di động hiện đại và cổng thông tin quản trị website mạnh mẽ, dự án mong muốn kiến tạo một hệ sinh thái thanh toán không tiền mặt văn minh, minh bạch và tối ưu hóa trải nghiệm cho cả sinh viên lẫn nhà trường, góp phần thúc đẩy tiến trình số hóa trong môi trường giáo dục.
