--- a/components/Section-VII/main.tex
+++ b/components/Section-VII/main.tex
@@ -1,165 +1,133 @@
-
 \newpage
 \section{\textbf{KẾT QUẢ THỰC NGHIỆM}}
 
-\textbf{1. Hệ thống kiểm duyệt nội dung đa phương thức}
+\subsection{Môi trường và Công cụ thực nghiệm}
+\begin{itemize}
+    \item \textbf{Thiết bị Mobile}: Redmi K70E.
+    \item \textbf{Môi trường giả lập}: BlueStacks.
+    \item \textbf{Backend Server}: Node.js v18 chạy trên Railway App.
+    \item \textbf{Database}: MongoDB Atlas (Cluster Tier M0).
+    \item \textbf{Cổng thanh toán}: Môi trường Sandbox của MoMo Developer.
+\end{itemize}
 
+\subsection{Kết quả triển khai Ứng dụng Sinh viên (Mobile App)}
+
+\subsubsection{1. Đăng nhập và Màn hình chính}
+Giao diện đăng nhập cho phép sinh viên truy cập bằng Mã số sinh viên và mật khẩu. Màn hình chính (Dashboard) hiển thị trực quan số dư hiện tại, các phím tắt chức năng (Nạp tiền, Thanh toán, Lịch sử) và tin tức từ nhà trường.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/report.png}
-    \caption{Hình ảnh Bảng kiểm duyệt nội dung vi phạm}
-    \label{fig:bao_cao}
+    \begin{subfigure}[b]{0.45\textwidth}
+        \centering
+        % \includegraphics[width=0.8\textwidth]{image/ketqua/login_screen.png}
+        \fbox{\begin{minipage}{0.8\textwidth}\centering\vspace{4cm}Login Screen\vspace{4cm}\end{minipage}}
+        \caption{Màn hình Đăng nhập}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.45\textwidth}
+        \centering
+        % \includegraphics[width=0.8\textwidth]{image/ketqua/home_screen.png}
+        \fbox{\begin{minipage}{0.8\textwidth}\centering\vspace{4cm}Home Screen\vspace{4cm}\end{minipage}}
+        \caption{Màn hình Chính (Dashboard)}
+    \end{subfigure}
+    \caption{Giao diện người dùng cơ bản}
 \end{figure}
 
-
-
-\textbf{Phân tích thông minh với OpenAI Moderation API}
-\begin{itemize}
-    \item \textbf{Kiểm duyệt đa phương thức}: Phân tích cả văn bản và hình ảnh trong moderationService.ts
-    \item \textbf{Phân loại mức độ nghiêm trọng}: Tự động xác định low, medium, high dựa trên điểm số vi phạm
-    \item \textbf{Xử lý thời gian thực}: Kiểm tra ngay khi đăng bài, tạo báo cáo tự động trong moderationController.ts
-\end{itemize}
-
-\textbf{Dashboard quản trị viên}
-\begin{itemize}
-    \item Giao diện quản lý báo cáo vi phạm hoàn chỉnh trong AdminPage.tsx
-    \item Workflow phê duyệt/từ chối với lý do chi tiết
-    \item Thống kê vi phạm theo thời gian và mức độ
-\end{itemize}
-
-\newpage
-
-\textbf{2. Tìm kiếm ngữ nghĩa vector-based}
+\subsubsection{2. Chức năng Nạp tiền qua MoMo}
+Sinh viên nhập số tiền cần nạp, ứng dụng sẽ tự động chuyển hướng sang App MoMo để xác nhận thanh toán. Sau khi thành công, số dư được cập nhật tức thì nhờ cơ chế IPN.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/ngunghia.png}
-    \caption{Hình ảnh Ngữ nghĩa}
-    \label{fig:nghu_nghia}
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \fbox{\begin{minipage}{0.9\textwidth}\centering\vspace{3.5cm}Nhập số tiền\vspace{3.5cm}\end{minipage}}
+        \caption{Nhập số tiền}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \fbox{\begin{minipage}{0.9\textwidth}\centering\vspace{3.5cm}Màn hình MoMo\vspace{3.5cm}\end{minipage}}
+        \caption{Xác nhận trên MoMo}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.3\textwidth}
+        \centering
+        \fbox{\begin{minipage}{0.9\textwidth}\centering\vspace{3.5cm}Nạp thành công\vspace{3.5cm}\end{minipage}}
+        \caption{Kết quả thành công}
+    \end{subfigure}
+    \caption{Quy trình nạp tiền qua ví MoMo}
 \end{figure}
 
-\begin{itemize}
-    \item \textbf{Vector embeddings}: Sử dụng OpenAI text-embedding-3-large trong embeddingService.ts
-    \item \textbf{Elasticsearch kNN}: Tìm kiếm vector với độ chính xác cao
-    \item \textbf{Tìm kiếm đa trường}: Kết hợp users, posts, comments trong một truy vấn
-\end{itemize}
+\subsubsection{3. Chức năng Thanh toán NFC}
+Sinh viên đưa điện thoại lại gần thiết bị thanh toán (POS giả lập hoặc điện thoại khác đóng vai trò máy POS). Giao dịch được xử lý trong vòng 1-2 giây.
 
-\textbf{Indexing thông minh}
-\begin{itemize}
-    \item \textbf{Auto-indexing}: Tự động tạo embeddings khi tạo bài viết mới
-    \item \textbf{Batch processing}: Script đánh index hàng loạt trong indexAdvancedData.ts
-\end{itemize}
-\newpage
-\textbf{3. Hệ thống nhắn tin thời gian thực}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/hinhve.png}
-    \caption{Hình ảnh Nhắn tin}
-    \label{fig:nhan_tin}
+    % \includegraphics[width=0.6\textwidth]{image/ketqua/nfc_payment.png}
+    \fbox{\begin{minipage}{0.6\textwidth}
+        \centering
+        \vspace{3cm}
+        [HÌNH ẢNH MINH HỌA THANH TOÁN NFC] \\
+        (Điện thoại chạm vào đầu đọc thẻ)
+        \vspace{3cm}
+    \end{minipage}}
+    \caption{Mô phỏng thanh toán một chạm NFC}
+    \label{fig:nfc_result}
 \end{figure}
-\textbf{Tính năng nâng cao}
-\begin{itemize}
-    \item \textbf{Socket.io real-time}: Tin nhắn tức thời với read receipts trong socket.ts
-    \item \textbf{Message pending system}: Bảo vệ quyền riêng tư với workflow chấp nhận tin nhắn
-    \item \textbf{Media sharing}: Upload ảnh/file với Cloudinary integration
-\end{itemize}
 
-\textbf{Quản lý cuộc trò chuyện}
-\begin{itemize}
-    \item \textbf{Conversation management}: Giao diện chat với tabs Recent, Following, Pending
-    \item \textbf{Auto-follow on accept}: Tự động follow khi chấp nhận tin nhắn
-    \item \textbf{File upload}: Hỗ trợ nhiều định dạng với preview
-\end{itemize}
+\subsubsection{4. Chatbot AI Tư vấn tài chính}
+Giao diện chat tích hợp Google Gemini. AI có thể trả lời các câu hỏi như "Số dư của tôi còn bao nhiêu?", "Tháng này tôi đã nạp bao nhiêu tiền?" dựa trên dữ liệu giao dịch thực tế.
 
-\textbf{4. Hệ thống gợi ý thông minh}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/recommend.png}
-    \caption{Hình ảnh Gợi ý}
-    \label{fig:goi_y}
+    % \includegraphics[width=0.5\textwidth]{image/ketqua/chatbot_screen.png}
+    \fbox{\begin{minipage}{0.5\textwidth}
+        \centering
+        \vspace{4cm}
+        [GIAO DIỆN CHATBOT] \\
+        User: Tháng này tiêu gì? \\
+        AI: Bạn đã tiêu 500k...
+        \vspace{4cm}
+    \end{minipage}}
+    \caption{Tương tác với trợ lý ảo AI}
 \end{figure}
-\textbf{Gợi ý kết bạn dựa trên social graph}
-\begin{itemize}
-    \item \textbf{Mutual connections}: Phân tích kết nối chung trong recommendationController.ts
-    \item \textbf{Popularity scoring}: Tính điểm uy tín dựa trên followers/following ratio
-    \item \textbf{Elasticsearch aggregation}: Query phức tạp để tìm gợi ý tối ưu
-\end{itemize}
 
-\textbf{Gợi ý nội dung cá nhân hóa}
-\begin{itemize}
-    \item \textbf{Vector similarity}: So sánh embedding của bài viết đã thích
-    \item \textbf{Weighted combination}: Kết hợp nhiều vector với trọng số
-    \item \textbf{Fallback mechanism}: Đảm bảo luôn có gợi ý dù thiếu dữ liệu
-\end{itemize}
+\subsection{Kết quả triển khai Web Quản trị (Admin Portal)}
 
-\textbf{5. Trợ lý AI tích hợp}
+\subsubsection{1. Dashboard Thống kê}
+Trang tổng quan dành cho nhà trường hiển thị biểu đồ dòng tiền vào/ra, tổng số lượng giao dịch trong ngày và số lượng người dùng mới.
+
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/ai.png}
-    \caption{Hình ảnh Trí tuệ nhân tạo}
-    \label{fig:tri_tue_nhan_tao}
-\end{figure}
-\textbf{OpenAI Assistant với context}
-\begin{itemize}
-    \item \textbf{Thread-based conversation}: Lưu trữ lịch sử trò chuyện trong openaiService.ts
-    \item \textbf{Context awareness}: AI hiểu thông tin user như bio, posts, likes
-    \item \textbf{File search integration}: Tìm kiếm thông tin từ database
-\end{itemize}
-
-\textbf{Giao diện chat thông minh}
-\begin{itemize}
-    \item \textbf{Quick suggestions}: Gợi ý câu hỏi nhanh trong ChatAI.tsx
-    \item \textbf{Real-time typing}: Hiệu ứng typing indicator
-    \item \textbf{Message history}: Lưu trữ và khôi phục cuộc trò chuyện
-\end{itemize}
-
-\textbf{6. Hệ thống xác minh email}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/mail.png}
-    \caption{Hình ảnh Xác nhận mail}
-    \label{fig:xac_nhan}
-\end{figure}
-\textbf{Security với UX tối ưu}
-\begin{itemize}
-    \item \textbf{Rate limiting}: Chống spam với cooldown 45 giây trong verificationController.ts
-    \item \textbf{Email masking}: Bảo mật thông tin email
-    \item \textbf{Protected routes}: Component bảo vệ yêu cầu xác minh trong EmailProtectedRoute.tsx
-\end{itemize}
-
-\textbf{Workflow hoàn chỉnh}
-\begin{itemize}
-    \item \textbf{Email change flow}: Quy trình đổi email an toàn
-    \item \textbf{Queue processing}: Xử lý email bất đồng bộ
-    \item \textbf{Modal integration}: Giao diện xác minh liền mạch
-\end{itemize}
-
-\textbf{Background processing}
-\begin{itemize}
-    \item \textbf{Social actions worker}: Xử lý like/follow bất đồng bộ trong socialActionsWorker.ts
-    \item \textbf{Queue-based architecture}: Tách biệt logic nặng khỏi response time
-    \item \textbf{Error handling}: Retry mechanism và fallback
-\end{itemize}
-\newpage
-\textbf{7. Bảo mật và triển khai}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{image/thucnghiem/Deployment.png}
-    \caption{Hình ảnh Deployment}
-    \label{fig:deployment}
+    % \includegraphics[width=0.9\textwidth]{image/ketqua/admin_dashboard.png}
+    \fbox{\begin{minipage}{0.9\textwidth}
+        \centering
+        \vspace{3cm}
+        [GIAO DIỆN WEB DASHBOARD] \\
+        Biểu đồ doanh thu - Thống kê User
+        \vspace{3cm}
+    \end{minipage}}
+    \caption{Dashboard quản trị viên}
 \end{figure}
 
-\textbf{SSL Certificate tự động}
-\begin{itemize}
-    \item \textbf{Let's Encrypt SSL}: Certificate miễn phí cho domain honeysocial.click
-    \item \textbf{Auto-renewal}: Script tự động gia hạn certificate
-    \item \textbf{HTTPS redirect}: Tự động chuyển hướng từ HTTP sang HTTPS
-\end{itemize}
+\subsubsection{2. Quản lý Giao dịch và Sinh viên}
+Quản trị viên có thể xem danh sách toàn bộ sinh viên, tìm kiếm theo mã số, xem lịch sử giao dịch chi tiết để hỗ trợ giải quyết khiếu nại.
 
-\textbf{Deployment hoàn chỉnh}
-\begin{itemize}
-    \item \textbf{Docker containerization}: Triển khai với docker-compose
-    \item \textbf{Nginx reverse proxy}: Load balancing và SSL termination
-    \item \textbf{Production monitoring}: Health checks và logging
-\end{itemize}
+\subsection{Đánh giá hiệu năng}
+\begin{table}[H]
+\centering
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\textbf{Chức năng} & \textbf{Thời gian đáp ứng TB} & \textbf{Kết quả} \\
+\hline
+Đăng nhập & 200ms & Đạt \\
+\hline
+Nạp tiền MoMo (IPN) & 1.5s - 3s & Đạt (Phụ thuộc mạng MoMo) \\
+\hline
+Thanh toán NFC & < 1s & Xuất sắc \\
+\hline
+Phản hồi AI Chatbot & 2s - 4s & Chấp nhận được (Phụ thuộc Gemini API) \\
+\hline
+\end{tabularx}
+\caption{Bảng đánh giá hiệu năng hệ thống}
+\end{table}
