--- a/components/reference.tex
+++ b/components/reference.tex
@@ -3,28 +3,32 @@
 \addcontentsline{toc}{section}{TÀI LIỆU THAM KHẢO}
 \begin{thebibliography}{00}
 
-\bibitem{aws-doc}
-Amazon Web Services, "Deploy a React-based single-page application to Amazon S3 and CloudFront." [Online].\\
-Available: \url{https://short.com.vn/P0gh}
+\bibitem{flutter-doc}
+Google Developers, "Flutter Documentation - Build apps for any screen." [Online].\\
+Available: \url{https://flutter.dev/docs}
 
-\bibitem{openai-moderation}
-OpenAI, "Moderation Guide." [Online].\\
-Available: \url{https://platform.openai.com/docs/guides/moderation}
+\bibitem{momo-api}
+MoMo for Business, "MoMo Payment API Integration." [Online].\\
+Available: \url{https://developers.momo.vn/}
 
-\bibitem{openai-assistants}
-OpenAI, "Assistants API Overview." [Online].\\
-Available: \url{https://platform.openai.com/docs/assistants/overview}
+\bibitem{google-gemini}
+Google AI for Developers, "Gemini API Overview." [Online].\\
+Available: \url{https://ai.google.dev/docs}
 
-\bibitem{openai-embeddings}
-OpenAI, "Embeddings Guide." [Online].\\
-Available: \url{https://platform.openai.com/docs/guides/embeddings}
+\bibitem{nodejs-doc}
+OpenJS Foundation, "Node.js Documentation." [Online].\\
+Available: \url{https://nodejs.org/en/docs/}
 
-\bibitem{cache-aside}
-GeeksforGeeks, "Cache-Aside Pattern." [Online].\\
-Available: \url{https://www.geeksforgeeks.org/cache-aside-pattern/}
+\bibitem{mongodb-doc}
+MongoDB, Inc., "MongoDB Manual." [Online].\\
+Available: \url{https://www.mongodb.com/docs/manual/}
 
-\bibitem{elasticsearch-knowi}
-Knowi, "What is Elasticsearch?" [Online].\\
-Available: \url{https://www.knowi.com/blog/what-is-elastic-search/}
+\bibitem{nfc-tech}
+NFC Forum, "Near Field Communication Technology Standards." [Online].\\
+Available: \url{https://nfc-forum.org/}
+
+\bibitem{jwt-intro}
+Auth0, "Introduction to JSON Web Tokens." [Online].\\
+Available: \url{https://jwt.io/introduction}
 
 \end{thebibliography}
