--- a/components/title.tex
+++ b/components/title.tex
@@ -25,7 +25,7 @@
         \end{tikzpicture}
         \vspace*{5cm}
         
-        \textbf{\fontsize{18pt}{21pt}\selectfont ĐỒ ÁN CƠ SỞ}\\[1.5cm]
+        \textbf{\fontsize{18pt}{21pt}\selectfont ĐỒ ÁN CHUYÊN NGÀNH}\\[1.5cm]
         % \textbf{\fontsize{18pt}{21pt}\selectfont ĐỒ ÁN BẢO MẬT THÔNG TIN\\[1.5cm]
         
 
@@ -33,22 +33,20 @@
         \vspace*{0.5cm}
         
 
-        \textbf{\fontsize{18pt}{21pt}\selectfont XÂY DỰNG WEBSITE MẠNG XÃ HỘI HONEY}\\[1.5cm] 
+        \textbf{\fontsize{18pt}{21pt}\selectfont S-Wallet Ví Điện Tử Sinh Viên}\\[1.5cm] 
         \vspace*{3cm}
         
         \begin{tabular}{ll}
             %Ngành: &  \textbf{CÔNG NGHỆ THÔNG TIN}\\
             %Chuyên ngành: &  \textbf{TRÍ TUỆ NHÂN TẠO}\\[1cm]
                 Giảng viên hướng dẫn: & \textbf{\fontsize{15pt}{28pt}\selectfont Trần Văn Hùng}\\
-                Sinh viên thực hiện: &  \textbf{\fontsize{15pt}{21pt}\selectfont 2280602828 - Trần Tấn Tài}\\
-                                 &  \textbf{\fontsize{15pt}{21pt}\selectfont 2280618597 - Trần Đình Ty}\\
-                                 &  \textbf{\fontsize{15pt}{21pt}\selectfont 2280603283 - Đặng Doanh Toại}\\
+                Sinh viên thực hiện: &  \textbf{\fontsize{15pt}{21pt}\selectfont 2280603283 - Đặng Doanh Toại}\\
                                  &  \textbf{\fontsize{15pt}{21pt}\selectfont 2280603036 - Phan Thanh Thiên
 }\\
                                 
         \end{tabular}
         \vspace*{6cm}\\
-        \textbf{\fontsize{10pt}{18pt}\selectfont TP. HỒ CHÍ MINH – THÁNG 3 NĂM 2025}
+        \textbf{\fontsize{10pt}{18pt}\selectfont TP. HỒ CHÍ MINH – THÁNG 11 NĂM 2025}
         \vfill
         
         
