--- a/components/Section-II/main.tex
+++ b/components/Section-II/main.tex
@@ -1,10 +1,10 @@
 
 \newpage
-
-\section*{\textbf{LỜI CAM ĐOAN}}
+\phantomsection
 \addcontentsline{toc}{section}{LỜI CAM ĐOAN}
+\section*{\textbf{LỜI CAM ĐOAN}}
 
-Nhóm chúng em xin cam đoan rằng đồ án \textbf{“Nền tảng Ví điện tử Sinh viên”} là kết quả nghiên cứu và thực hiện của tất cả thành viên trong nhóm, dưới sự hướng dẫn khoa học của giảng viên.
+Nhóm chúng em xin cam đoan rằng đồ án \textbf{“S-Wallet Ví Điện Tử Sinh Viên”} là kết quả nghiên cứu và thực hiện của tất cả thành viên trong nhóm, dưới sự hướng dẫn khoa học của giảng viên.
 
 Toàn bộ nội dung, số liệu và kết quả trình bày trong đồ án này là trung thực, được chúng tôi tìm hiểu, phân tích và xây dựng dựa trên kiến thức chuyên môn và các tài liệu tham khảo uy tín. Các chức năng của hệ thống như thanh toán NFC, tích hợp cổng thanh toán MoMo, và chatbot AI đều được nhóm tự nghiên cứu và phát triển. Chúng tôi cam kết không sao chép nguyên văn hoặc sử dụng trái phép nội dung từ bất kỳ nguồn nào mà không có trích dẫn rõ ràng.
 
