--- a/components/Section-VIII/main.tex
+++ b/components/Section-VIII/main.tex
@@ -1,79 +1,55 @@
 \newpage
-\section{\textbf{KẾT LUẬN VÀ KIẾN NGHỊ}}
+\section{\textbf{KẾT LUẬN VÀ HƯỚNG PHÁT TRIỂN}}
 
+\subsection{Kết luận}
 
-\subsection{Kết Luận}
+Sau quá trình nghiên cứu và thực hiện, đồ án "Nền tảng Ví điện tử Sinh viên" đã hoàn thành các mục tiêu đề ra ban đầu, xây dựng thành công một hệ sinh thái thanh toán số khép kín phục vụ môi trường giáo dục đại học.
 
-\subsubsection{Tổng kết quá trình thực hiện đồ án}
-Đồ án đã thực hiện xây dựng thành công mạng xã hội Honey Social với kiến trúc hiện đại, tách biệt Frontend và Backend rõ ràng. Quá trình phát triển tuân theo phương pháp Agile, cho phép linh hoạt điều chỉnh khi gặp thách thức. Việc áp dụng các mô hình thiết kế như MVC, đã giúp mã nguồn có cấu trúc tốt, dễ bảo trì và mở rộng.
-
-\subsubsection{Kết quả đạt được}
+\textbf{Các kết quả đạt được bao gồm:}
 \begin{enumerate}
-    \item \textbf{Hệ thống đa chức năng} - Mạng xã hội hoàn chỉnh với các tính năng chính:
+    \item \textbf{Về mặt công nghệ}:
     \begin{itemize}
-        \item Đăng bài viết với hình ảnh và văn bản
-        \item Hệ thống chat realtime giữa người dùng
-        \item Trợ lý AI thông minh tích hợp
-        \item Hệ thống gợi ý nội dung dựa trên vector search
-        \item Hệ thống thông báo realtime
-        \item Tìm kiếm nâng cao với Elasticsearch
+        \item Xây dựng thành công ứng dụng di động đa nền tảng bằng \textbf{Flutter}, hoạt động mượt mà trên Android.
+        \item Làm chủ công nghệ \textbf{NFC}, cho phép biến điện thoại thành thẻ thanh toán tiện lợi.
+        \item Tích hợp thành công cổng thanh toán \textbf{MoMo} và trí tuệ nhân tạo \textbf{Google Gemini}, mang lại trải nghiệm hiện đại cho sinh viên.
+        \item Hệ thống Backend \textbf{Node.js/MongoDB} hoạt động ổn định, xử lý tốt các tác vụ đồng thời.
     \end{itemize}
     
-    \item \textbf{Kiến trúc kỹ thuật hiện đại}:
+    \item \textbf{Về mặt thực tiễn}:
     \begin{itemize}
-        \item Frontend: React.js với state management thông qua Redux
-        \item Backend: Node.js, Express.js với TypeScript
-        \item Cơ sở dữ liệu: MongoDB kết hợp với Redis cache
-        \item WebSocket cho giao tiếp realtime
-        \item RabbitMQ cho hàng đợi xử lý bất đồng bộ
-        \item Docker cho việc phát triển và triển khai
-    \end{itemize}
-    
-    \item \textbf{Hiệu năng cao}:
-    \begin{itemize}
-        \item Hệ thống cache đa tầng giúp giảm tải database
-        \item Xử lý bất đồng bộ các tác vụ nặng như phân tích nội dung, moderation
-        \item Vector search cho khả năng tìm kiếm và gợi ý thông minh
+        \item Giải quyết được bài toán thanh toán không dùng tiền mặt trong trường học (căn tin, gửi xe, đóng phạt thư viện).
+        \item Cung cấp công cụ quản lý tài chính cá nhân hiệu quả cho sinh viên.
+        \item Giúp nhà trường quản lý dòng tiền và dữ liệu sinh viên minh bạch, chính xác hơn.
     \end{itemize}
 \end{enumerate}
 
-\subsubsection{Hạn chế và thách thức}
-\begin{enumerate}
-    \item \textbf{Độ phức tạp của hệ thống}:
-    \begin{itemize}
-        \item Cache invalidation khó xử lý đúng trong mọi tình huống
-        \item Phân tán microservice làm tăng độ phức tạp vận hành
-    \end{itemize}
-    
-    \item \textbf{Hiệu năng của AI}:
-    \begin{itemize}
-        \item Thời gian phản hồi của ChatAI đôi khi còn chậm
-        \item Vector embedding tốn kém tài nguyên khi hệ thống lớn
-    \end{itemize}
-    
-    \item \textbf{Giới hạn tích hợp}:
-    \begin{itemize}
-        \item Chưa có ứng dụng di động native
-        \item Hệ thống gợi ý cần thêm dữ liệu để tăng độ chính xác
-    \end{itemize}
-\end{enumerate}
+\textbf{Hạn chế tồn tại:}
+\begin{itemize}
+    \item Tính năng NFC hiện tại hoạt động tốt nhất trên Android; khả năng hỗ trợ iOS còn hạn chế do chính sách bảo mật của Apple (chỉ hỗ trợ đọc, hạn chế giả lập thẻ).
+    \item Tốc độ phản hồi của Chatbot đôi khi còn phụ thuộc vào độ trễ của API Google Gemini.
+    \item Chưa tích hợp các phương thức xác thực sinh trắc học (Vân tay/FaceID) để tăng cường bảo mật cho giao dịch giá trị lớn.
+\end{itemize}
 
-\subsection{Kiến nghị và hướng phát triển}
+\subsection{Hướng phát triển}
 
-\subsubsection{Phát triển ứng dụng di động}
-Xây dựng ứng dụng di động native cho iOS và Android sử dụng React Native hoặc Flutter để tận dụng codebase hiện có, đồng thời cải thiện trải nghiệm người dùng trên thiết bị di động với các tính năng như thông báo đẩy, camera tích hợp và trải nghiệm offline.
+Để đưa sản phẩm vào ứng dụng thực tế quy mô lớn, nhóm đề xuất các hướng phát triển trong tương lai:
 
-\subsubsection{Nâng cấp hệ thống gợi ý nội dung}
-Cải tiến hệ thống gợi ý bằng cách kết hợp các yếu tố hành vi người dùng (thời gian xem, tương tác), ngữ cảnh (thời gian, vị trí) và mạng xã hội (kết nối giữa người dùng) để tạo ra gợi ý cá nhân hóa chính xác hơn.
+\subsubsection{1. Mở rộng tính năng và Nền tảng}
+\begin{itemize}
+    \item \textbf{Hỗ trợ iOS toàn diện}: Nghiên cứu các giải pháp thay thế như QR Code động hoặc Bluetooth Low Energy (BLE) để phục vụ người dùng iPhone nếu rào cản NFC chưa được gỡ bỏ.
+    \item \textbf{Bảo mật sinh trắc học}: Tích hợp xác thực vân tay và nhận diện khuôn mặt khi thực hiện thanh toán để thay thế mã PIN truyền thống.
+\end{itemize}
 
-\subsubsection{Triển khai AI Chatbot học tự động}
-Phát triển khả năng học tự động cho ChatAI để liên tục cải thiện chất lượng phản hồi dựa trên tương tác của người dùng. Triển khai fine-tuning mô hình để chatbot hiểu tốt hơn ngữ cảnh và văn hóa cụ thể của cộng đồng Honey Social.
+\subsubsection{2. Hệ sinh thái tài chính mở rộng}
+\begin{itemize}
+    \item \textbf{Thanh toán đa dịch vụ}: Mở rộng liên kết thanh toán học phí, bảo hiểm y tế và các dịch vụ xung quanh trường (nhà trọ, tiệm in ấn).
+    \item \textbf{Gamification}: Tích hợp tính năng tích điểm đổi quà, xếp hạng chi tiêu hợp lý để khuyến khích sinh viên sử dụng.
+\end{itemize}
 
-\subsubsection{Tối ưu cơ chế làm mới Redis Cache}
-Cải tiến cơ chế cache với chiến lược write-through và read-through thông minh hơn, đồng thời sử dụng Redis Streams để quản lý việc làm mới cache phân tán, giảm thiểu lỗi cache inconsistency trong hệ thống nhiều node.
+\subsubsection{3. Ứng dụng Blockchain}
+\begin{itemize}
+    \item Nghiên cứu ứng dụng Blockchain (Private Chain) để lưu trữ log giao dịch, đảm bảo tính minh bạch tuyệt đối và không thể sửa đổi, giúp việc đối soát tài chính giữa nhà trường và sinh viên trở nên tin cậy hơn.
+\end{itemize}
 
-\subsubsection{Cải tiến hệ thống Post Recommendation}
-Nâng cấp hệ thống gợi ý bài đăng bằng cách sử dụng kỹ thuật collaborative filtering kết hợp với vector search, đồng thời tối ưu hóa thuật toán lọc bọt (filter bubble) để đảm bảo người dùng tiếp cận được nhiều nội dung đa dạng.
-
-\subsubsection{Phát triển ChatboxAI nội bộ}
-Xây dựng công cụ chatbot nội bộ được huấn luyện trên dữ liệu hệ thống để hỗ trợ người quản trị trong việc phân tích xu hướng, phát hiện nội dung vi phạm, và tổng hợp báo cáo hoạt động của cộng đồng.
+\vspace{1cm}
+Đồ án này là bước khởi đầu quan trọng, minh chứng cho khả năng ứng dụng công nghệ mới vào giải quyết các vấn đề thực tiễn trong môi trường giáo dục số. Nhóm thực hiện hy vọng sản phẩm sẽ tiếp tục được hoàn thiện và có cơ hội triển khai thực tế trong tương lai gần.
